--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.1",
+    "jest-dom": "^3.1.2",
+    "react-testing-library": "^6.0.0",
     "typescript": "^3.0.1"
   }
 }
