--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "styled-components": "^3.4.5"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start": "set PORT=3001 && react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
