--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
     "@types/react-redux": "^6.0.6",
     "@types/react-youtube": "^7.6.1",
     "@types/reactstrap": "^6.4.2",
     "babel-plugin-styled-components": "^1.5.1",
     "bootstrap": "^4.1.3",
-    "react": "^16.4.2",
+    "react": "^16.8.0",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.17.0",
     "react-youtube": "^7.9.0",
     "reactstrap": "^6.5.0",
-    "redux": "^4.0.0",
-    "styled-components": "^3.4.5"
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts-ts start",
@@ -25,13 +26,13 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.9.1",
-    "@types/react": "^16.4.11",
+    "@types/jest": "^24.0.9",
+    "@types/node": "^11.10.4",
+    "@types/react": "^16.8.6",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.1",
     "jest-dom": "^3.1.2",
     "react-testing-library": "^6.0.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.4.3"
   }
 }
